Fixes in Review service logic - Removed officeName from ReviewRequestDTO - Reformatting of BookRepository - Fixes in ReviewQueryServiceImpl - Fixes in ReviewManagementServiceImpl - Fixes in tests